# cell_cocluster

./: .coverage  .coverage.zihans-MacBook-Air.local.68018.XJniBrVx  .coveragerc  .gitignore  .gitmodules  .sourcery.yaml  CLAUDE.md  DEMO_README.md  FONT_SCALING_GUIDE.md  Individual_Plots_Documentation.md  README.md  README_dorsal_analysis.md  TESTING_REPORT.md  __init__.py  aggregate_features.py  check_npy.py  cluster_0_details.txt  cluster_1_details.txt  cluster_2_details.txt  coclust_aggregated_features.py  cocluster_timeline.py  coclustering_demo.py  dorsal_intercalation_analysis.py  feature_extraction.py  for_yan.py  generate_individual_plots.py  generate_new_plots.py  intestinal_morphogenesis_demo_analysis.md  new_plot_functions.py  plot.md  plot_captions.md  pyproject.toml  pytest.ini  read_data.py  requirements.txt  run_all_demos.py  setup.py  sparse_tensor_analysis.py  test_new_plots.py  test_runner.py  (+7 more)
.claude/: settings.local.json
DATA/: dorsal_intercalation.txt  fate.csv
DATA/sub_triclusters/: cell_clusters.csv  time_clusters.csv
cell_cocluster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: default.yaml
demo_plots/: report.md
src/data/: reader.py
src/features/: kinematic_features.py
src/utils/: feature_utils.py  file_utils.py  helpers.py
src/visualization/: plotter.py  video.py
tasks/: kinematic_features.py
tests/: test_sh_coefficients.py
tests/test_data/: test_reader.py
tests/test_features/: test_kinematic.py  test_kinematic_features.py  test_sh_coefficients.py
tests/test_scripts/: test_aggregate_features.py  test_visualize_lineage.py
tests/test_utils/: test_feature_utils.py  test_file_utils.py  test_helpers.py
tests/test_visualization/: test_plotter.py
