[project]
name = "cell-cocluster"
version = "0.1.0"
description = "Cell co-clustering analysis toolkit"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Zihan", email = "wzh4464@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "jupytext>=1.17.0",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.1",
    "nibabel>=5.3.2",
    "open3d",
    "pyshtools>=4.13.1",
    "dash>=3.0.3",
    "plotly>=6.0.1",
    "build>=1.2.2.post1",
    "ipykernel>=6.29.5",
    "click>=8.0.0",
    "seaborn>=0.13.2",
    "dask>=2025.4.1",
    "clustering-geodata-cubes>=0.8.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
kinematic-features = "tasks.kinematic_features:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src", "tasks"]
